--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "langchain>=0.3.27",
+    "langchain-google-genai>=2.1.8",
+    "langgraph>=0.5.4",
+    "pymupdf>=1.26.3",
     "pypdf2>=3.0.1",
+    "python-dotenv>=1.1.1",
 ]
