Refactor isort check workflow to improve outcome handling
- Updated the isort check workflow to use a more straightforward method for determining success by directly referencing the step outcome instead of the exit code.

--- a/.github/workflows/Isort_Check.yml
+++ b/.github/workflows/Isort_Check.yml
@@ -35,8 +35,8 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const exitCode = ${{ steps.isort-check.outputs.exit-code || steps.isort-check.outcome }};
-          const isSuccess = exitCode === 0 || exitCode === 'success';
+          const stepOutcome = '${{ steps.isort-check.outcome }}';
+          const isSuccess = stepOutcome === 'success';
           
           if (isSuccess) {
             console.log("✅ Isort check passed");
