Update .gitignore and GitHub Actions workflow for PDF processing
- Added CLAUDE.md and field_analysis_report.json to .gitignore for better file management.
- Updated the Run_Reader.yml workflow to correct the script path for reading PDF fields and added a step to upload the JSON artifact after processing.

--- a/.github/workflows/Run_Reader.yml
+++ b/.github/workflows/Run_Reader.yml
@@ -47,7 +47,7 @@ jobs:
       id: pdf-reader
       run: |
         echo "Reading PDF form fields..."
-        uv run src/read_fields.py
+        uv run read_pdf_fields.py
         echo "exit_code=$?" >> $GITHUB_OUTPUT
         
     - name: Check script exit code
@@ -60,3 +60,9 @@ jobs:
       if: steps.pdf-reader.outputs.exit_code == '0'
       run: |
         echo "✅ PDF reader completed successfully!"
+
+    - name: Upload Json Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: field_analysis_report.json
+        path: field_analysis_report.json
