Refactor GitHub Actions workflow for PDF field analysis
- Renamed job from 'read-pdf-fields' to 'generate-field-report' for clarity.
- Added a new job 'validate-field-report' to download and check the generated artifact, enhancing the workflow's functionality.

--- a/.github/workflows/Run_Reader.yml
+++ b/.github/workflows/Run_Reader.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch: 
 
 jobs:
-  read-pdf-fields:
+  generate-field-report:
     runs-on: ubuntu-latest
     
     steps:
@@ -66,3 +66,14 @@ jobs:
       with:
         name: field_analysis_report.json
         path: field_analysis_report.json
+
+  validate-field-report:
+    needs: generate-field-report
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: field_analysis_report.json
+      - name: Check Directory
+        run: ls
