Enhance GitHub Actions workflows with caching for dependencies
- Added caching for dependencies in both Isort_Check.yml and Run_Reader.yml to improve workflow efficiency.
- Updated Run_Reader.yml to include an output for the script file, enhancing the job's functionality.

--- a/.github/workflows/Run_Reader.yml
+++ b/.github/workflows/Run_Reader.yml
@@ -10,7 +10,8 @@ on:
 jobs:
   generate-field-report:
     runs-on: ubuntu-latest
-    
+    outputs:
+        script-file: ${{ steps.pdf-reader.outputs.script-file }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -24,6 +25,14 @@ jobs:
       uses: astral-sh/setup-uv@v3
       with:
         version: latest
+
+    - name: Cache Dependencies
+      uses: actions/cache@v3
+      with: 
+        path: ~/.cache/uv/
+        key: uv-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+        restore-keys: |
+          uv-${{ runner.os }}
         
     - name: Install dependencies
       run: uv sync
