--- a/.github/workflows/Isort_Check.yml
+++ b/.github/workflows/Isort_Check.yml
@@ -22,7 +22,15 @@ jobs:
 
     - name: Install uv
       uses: astral-sh/setup-uv@v3
-      
+
+    - name: Cache Dependencies
+      uses: actions/cache@v3
+      with: 
+        path: ~/.cache/uv/
+        key: uv-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+        restore-keys: |
+          uv-${{ runner.os }}
+
     - name: Install dependencies
       run: uv sync
     
